fixing overflow problem

--- a/src/components/SeachForm/SearchForm.css
+++ b/src/components/SeachForm/SearchForm.css
@@ -1,6 +1,6 @@
 .search-form{
     width: 100%;
-    max-width: 680px;
+    max-width: 620px;
 }
 
 .search-form-elem{
