--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,6 @@
     line-height: 1.7;
     font-family: 'Poppins', sans-serif;
     color: var(--black-color);
-    overflow-x:hidden !important;
   }
 
 
